@@ -443,9 +443,9 @@ CONFIG_USBMSC_NWRREQS=4
 CONFIG_USBMSC_NRDREQS=4
 CONFIG_USBMSC_BULKINREQLEN=512
 CONFIG_USBMSC_BULKOUTREQLEN=512
-CONFIG_USBMSC_VENDORID=0x00
+CONFIG_USBMSC_VENDORID=0x584e
 CONFIG_USBMSC_VENDORSTR="Nuttx"
-CONFIG_USBMSC_PRODUCTID=0x00
+CONFIG_USBMSC_PRODUCTID=0x5342
 CONFIG_USBMSC_PRODUCTSTR="Mass Storage"
 CONFIG_USBMSC_VERSIONNO=0x399
 # CONFIG_USBMSC_REMOVABLE is not set
@@ -640,6 +640,10 @@ CONFIG_EXAMPLES_USBMSC_DEVPATH2="/dev/mmcsd1"
 CONFIG_EXAMPLES_USBMSC_DEVMINOR3=2
 CONFIG_EXAMPLES_USBMSC_DEVPATH3="/dev/mmcsd2"
 # CONFIG_EXAMPLES_USBMSC_DEBUGMM is not set
+CONFIG_EXAMPLES_USBMSC_CMD_STACKSIZE=768
+CONFIG_EXAMPLES_USBMSC_CMD_PRIORITY=100
+CONFIG_EXAMPLES_USBMSC_DAEMON_STACKSIZE=2048
+CONFIG_EXAMPLES_USBMSC_DAEMON_PRIORITY=100
 # CONFIG_EXAMPLES_USBTERM is not set
 # CONFIG_EXAMPLES_WATCHDOG is not set
 
